Fixed one test